[package]
authors = ['Junius Zhou']
edition = '2018'
name = 'pow-casper'
version = "2.0.0-alpha.8"
description = 'A Substrate node that demonstrates minimal proof of work consensus'
license = "GPL-3.0-or-later"

[[bin]]
name = 'pow-casper'
path = 'src/main.rs'

[dependencies]
futures = '0.3.1'
log = '0.4.8'
structopt = '0.3.8'
parity-scale-codec = '1.3.0'
sha3 = "0.8"
rand = { version = "0.7", features = ["small_rng"] }
sc-consensus = '0.8.0-alpha.8'
# sc-consensus-pow = '0.8.0-alpha.8'
sc-consensus-pow = { package = "casper-consensus-pow", path = "../consensus/pow" }
sp-consensus-pow = '0.8.0-alpha.8'
sc-client-api = '2.0.0-alpha.8'
sp-blockchain = '2.0.0-alpha.8'
sp-timestamp = '2.0.0-alpha.8'
sc-basic-authorship = '0.8.0-alpha.8'
sc-cli = '0.8.0-alpha.8'
sc-executor = '0.8.0-alpha.8'
sc-network = '0.8.0-alpha.8'
sc-service = '0.8.0-alpha.8'
sc-transaction-pool = '2.0.0-alpha.8'
sp-consensus = '0.8.0-alpha.8'
sp-core = '2.0.0-alpha.8'
sp-inherents = '2.0.0-alpha.8'
sp-runtime = '2.0.0-alpha.8'
sp-transaction-pool = '2.0.0-alpha.8'
sha3pow = { path = '../consensus/sha3pow' }
runtime = { package = "casper-runtime", path = "../runtime" }

[build-dependencies]
vergen = '3.0.4'
substrate-build-script-utils = '2.0.0-alpha.8'
