[package]
name = "casper-consensus-pow"
version = "0.8.0-alpha.8"
authors = ["Parity Technologies <admin@parity.io>"]
description = "PoW consensus algorithm for substrate"
edition = "2018"
license = "GPL-3.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.0", features = ["derive"] }
sp-core = { version = "2.0.0-alpha.8" }
sp-std = { version = "2.0.0-alpha.8" }
sp-blockchain = { version = "2.0.0-alpha.8"}
sp-runtime = { version = "2.0.0-alpha.8"}
sp-api = { version = "2.0.0-alpha.8" }
sc-client-api = { version = "2.0.0-alpha.8" }
sp-block-builder = { version = "2.0.0-alpha.8"}
sp-inherents = { version = "2.0.0-alpha.8"}
sp-consensus-pow = { version = "0.8.0-alpha.8"}
sp-consensus = { version = "0.8.0-alpha.8" }
log = "0.4.8"
futures = { version = "0.3.1", features = ["compat"] }
sp-timestamp = { version = "2.0.0-alpha.8" }
derive_more = "0.99.2"
prometheus-endpoint = { package = "substrate-prometheus-endpoint", git = 'https://github.com/paritytech/substrate', version = "0.8.0-dev"}

