[package]
name = "pallet-casper-runtime-api"
version = "2.0.0"
authors = ["Junius Zhou"]
edition = "2018"
license = "GPL-3.0-or-later"

[dependencies]
sp-api = { version = '2.0.0-rc2', default-features = false}
sp-runtime  = { version = '2.0.0-rc2', default-features = false}
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false }

[dev-dependencies]
serde_json = "1.0.41"

[features]
default = ["std"]
std = [
	"sp-api/std",
	"sp-runtime/std",
	"codec/std",
]
